kubernetes/dev/writerite-development.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: writerite-development
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: writerite-backend-yoga
    servicePort: 4000
  rules:
  - host: localhost
    http:
      paths:
      - path: /.*
        backend:
          serviceName: writerite-backend-yoga
          servicePort: 4000
  tls:
  - hosts:
    - localhost
    secretName: localwriteritesite-tls
